minor tweaks, overflow resolved.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,6 @@
-@media (max-width: 992px) {
-    
-    .introPageBigPic {
-        position: relative;
-        top: 10%;
-        transform: rotate(0deg);
-    }
-    
-    #title {
-        text-align: center;
-    }
+html, body{
+    width: 100%;
+    overflow-x: hidden;
 }
 
 #title {
@@ -65,8 +57,6 @@
     font-size: 1.25rem;
 }
 
-
-
 .container-fluid {
     padding: 2% 15%;
 }
@@ -77,8 +67,8 @@ h1 {
     font-size: 5rem;
 }
 
-.playDown {
-    margin-left: 5%;
+.DownloadButton {
+    margin: 2%;
 }
 
 .btn {
@@ -124,14 +114,14 @@ p {
 }
 
 .press-logo {
-    width: 15%;
-    margin: 2%;
+    width: 20%;
+    margin: 1%;
 }
 
 .testimonial-pic {
-    width: 12%;
+    width: 15%;
     border-radius: 100%;
-    margin: 2rem;
+    margin: 1rem;
 }
 
 .testimonial-pic-disc {
@@ -148,4 +138,16 @@ p {
 
 .pricingCard {
     margin: 15px;
+}
+
+@media (max-width: 992px) {
+    
+    .introPageBigPic {
+        top: 10%;
+        transform: rotate(0deg);
+    }
+    
+    #title {
+        text-align: center;
+    }
 }
